Fixes mobile menu nag alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -936,6 +936,12 @@ input[type="search"]::-webkit-search-decoration {
 	.menu .main, .main {
 		padding: 0 10px;
 	}
+	.widget.menusections ul li {
+			margin: 0;
+			width: 100%;
+			text-align: center;
+			line-height: bkscale(@font-swatch6-line-height, 1.58);
+	}
 }
 
 /* ===============================
